--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "parcel -p 8080 artisticapp.html",
-    "build": "rimraf dist && parcel build ecommerce.html",
+    "start": "parcel -p 8080 src/artisticapp.html",
+    "build": "rimraf dist && parcel build src/index.html --out-dir docs --public-url ./",
     "deploy": "npm run build && git add . && git commit -a -m 'latest build' && git push origin master"
   },
   "dependencies": {
